Cyberduck
https://cyberduck.io/

6.3.1
- [Bugfix] Slow user interface performance (Mac) (#9970)

6.3
- [Feature] Support for DRACOON cloud service (DRACOON)
- [Feature] Support for Google Team Drives (Google Drive) (#9928)
- [Feature] Support for Joyent Triton Object Storage (Triton)
- [Feature] Support for China (Beijing) region (S3)
- [Bugfix] Allow custom endpoint with default connection profile (S3)
- [Bugfix] Unnecessary password prompt for connection (Local Disk)
- [Bugfix] Login where authentication is required with both password and one-time passcode (SFTP)
- [Bugfix] File not found failure when downloading folder form vault (Cryptomator)
- [Bugfix] Not possible to copy files between browser windows (FTP)

6.2.11
- [Bugfix] Application crash restoring workspace (Windows)

6.2.10
- [Feature] Option to disable auto-detect of vaults (Cryptomator)
- [Bugfix] Login where authentication is required with both password and public key method (SFTP)

6.2.9
- [Bugfix] Disable selection of client certificate in bookmark window when not applicable
- [Bugfix] Rename and override exiting file (One Drive, Dropbox)
- [Bugfix] Disable use of hashed hostname when writing to ~/.ssh/known_hosts (SFTP)

6.2.8
- [Bugfix] Delete session when canceling upload (One Drive)

6.2.7
- [Bugfix] Rename and override exiting file (Google Drive)
- [Bugfix] Reduce number of requests for uploads (Google Drive)

6.2.6
- [Bugfix] Quick Look only works one time (#9889) (Mac)
- [Bugfix] Disable notification for opened connection

6.2.5
- [Bugfix] Authentication using OAuth (Windows)
- [Bugfix] Failure to read attributes (S3) (#10068)

6.2.4
- [Feature] Provide URL references to Office 365 documents in browser (OneDrive)
- [Feature] Disable Bonjour notifications
- [Bugfix] Transfer progress stops updating (Windows) (#10042)

6.2.3
- [Feature] Allow to resume downloads (Cryptomator)
- [Feature] Allow to resume downloads (Dropbox)
- [Bugfix] Failure duplicating files (FTP) (#10049)