@@ -54,7 +54,6 @@
         ul li ul li {
             list-style-type: disc;
         }
-
     </style>
 </head>
 
@@ -77,6 +76,10 @@
 <ul>
     <li><span class="label label-warning">Bugfix</span> Slow user interface performance (Mac) (<a
         href="https://trac.cyberduck.io/ticket/9970">#9970</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Prompt for credentials when using public key authentication with
+        agent (SFTP) (<a
+            href="https://trac.cyberduck.io/ticket/10148">#10148</a>)
     </li>
 </ul>
 
